# cut-image-rectangle

./: CMakeLists.txt
src/: main.cpp
